--- a/css/style.css
+++ b/css/style.css
@@ -74,15 +74,6 @@ body{
 .text-container{
 	width: 100%;
 }
-header{
-	position: relative;
-	padding: 0 .5em;
-}
-@media only screen and (min-width: 480px){
-	header{
-		padding: .5em 1em 0;
-	}
-}
 main{
 	font-size: 100%;
 	text-align: center;
@@ -107,10 +98,16 @@ main{
 		font-size: 1.05em;
 	}
 }
+header,
 .cluster main{
+	position: relative;
 	padding: 0 .5em;
-	max-width: 100%;
-	overflow: hidden;
+}
+@media only screen and (min-width: 480px){
+	header,
+	.cluster main{
+		padding: .5em 1em 0;
+	}
 }
 header,
 .cluster main{
@@ -120,9 +117,6 @@ header,
 	header,
 	.cluster main{
 		margin-top: 47px;
-	}
-	.cluster main{
-		padding: 0 1em;
 	}
 }
 @media only screen and (min-width: 768px){
@@ -143,23 +137,23 @@ header,
 .cluster section{
 	border: 1px solid #322d29;
 	border-radius: 5px;
-	margin: .75em 0 1em;
-	display: inline-block;
+	/* margin: .75em 0 1em; */
+	/* display: inline-block;
 	vertical-align: top;
 	flex-flow: row wrap;
 	flex: 1 200px;
-	height: 100%;
+	height: 100%; */
 }
 @media only screen and (min-width: 768px){
 	.cluster section{
-		margin: 1.5em 0 .5em;
+		/* margin: 1.5em 0 .5em; */
 		max-width: 650px;
 	}
 }
 @media only screen and (min-width: 992px){
 	.cluster section{
-		margin: 1em;
-		width: calc(50% - 38px);
+		/* margin: 1em; */
+		/* width: calc(50% - 38px); */
 		max-width: 442px;
 	}
 }
@@ -708,11 +702,6 @@ nav#nav2 #overlay-menu li button.close:focus i{
 /* 1.4. Carousel */
 
 /* 	Carousel adapted from https://www.w3.org/TR/wai-aria-practices-1.1/examples/carousel/carousel-1.html */
-@media only screen and (min-width: 992px){
-	.carousel{
-		margin-top: .5em;
-	}
-}
 .carousel .carousel-inner{
 	margin: 0 auto;
 	max-width: 900px;
