--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,27 @@ body{
 .text-container{
 	width: 100%;
 }
+header{
+	position: relative;
+	margin: 41px auto 0;
+	padding: 0 .5em;
+}
+@media only screen and (min-width: 480px){
+	header{
+		margin-top: 47px;
+		padding: .5em 1em 0;
+	}
+}
+@media only screen and (min-width: 768px){
+	header{
+		margin-top: 51px;
+	}
+}
+@media only screen and (min-width: 992px){
+	header{
+		margin-top: 63px;
+	}
+}
 main{
 	font-size: 100%;
 	text-align: center;
@@ -98,66 +119,46 @@ main{
 		font-size: 1.05em;
 	}
 }
-header,
 .cluster main{
 	position: relative;
-	padding: 0 .5em;
+	margin: 41px auto 0;
+	padding: 0 .5em 0;
 }
 @media only screen and (min-width: 480px){
-	header,
 	.cluster main{
+		margin-top: 47px;
 		padding: .5em 1em 0;
 	}
 }
-header,
-.cluster main{
-	margin: 41px auto 0;
-}
-@media only screen and (min-width: 480px){
-	header,
-	.cluster main{
-		margin-top: 47px;
-	}
-}
 @media only screen and (min-width: 768px){
-	header,
 	.cluster main{
 		margin-top: 51px;
 	}
 }
 @media only screen and (min-width: 992px){
-	header,
 	.cluster main{
 		margin-top: 63px;
-	}
-	.cluster main{
+		padding: 0 1em;
+		max-width: 1366px;
 		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: stretch;
 	}
 }
-.cluster section{
+.cluster main section{
 	border: 1px solid #322d29;
 	border-radius: 5px;
-	/* margin: .75em 0 1em; */
-	/* display: inline-block;
-	vertical-align: top;
-	flex-flow: row wrap;
-	flex: 1 200px;
-	height: 100%; */
-}
-@media only screen and (min-width: 768px){
-	.cluster section{
-		/* margin: 1.5em 0 .5em; */
-		max-width: 650px;
-	}
+	margin: 1em 0 2em;
 }
 @media only screen and (min-width: 992px){
-	.cluster section{
-		/* margin: 1em; */
-		/* width: calc(50% - 38px); */
-		max-width: 442px;
+	.cluster main section{
+		margin: 1em;
+		width: calc(50% - 2em - 2px);
+		max-width: 500px;
 	}
 }
-.cluster section p{
+.cluster main section p{
 	padding: 0 1em;
 }
 main section p,
@@ -229,7 +230,7 @@ footer p .site-detail:last-child::after{
 	header,
 	main,
 	footer{
-		display: block !important;
+		display: block;
 		visibility: visible !important;
 		opacity: 1 !important;
 	}
@@ -287,8 +288,7 @@ h2, h3, h4{
 h2{
 	font-size: 1.2em;
 }
-.cluster h2,
-.cluser h2{
+.cluster h2{
 	font-weight: 700;
 	font-variant: small-caps;
 	color: #fff;
@@ -297,9 +297,6 @@ h2{
 	border-radius: 4px 4px 0 0;
 	margin-top: 0;
 	padding: .5em 0;
-}
-.cluster section:first-of-type h2{
-	font-variant: normal;
 }
 h3{
 	font-size: 1.1em;
@@ -408,12 +405,6 @@ nav#nav1 a:visited{
 	color: #191716;
 	text-decoration: none;
 }
-/* nav#nav1 a:hover,
-nav#nav1 a:focus{
-	color: #fff;
-	background: #191716;
-	transition: 0.2s;
-} */
 nav#nav1.borderBottom{
 	border-bottom: 1px solid #8c8c8c;
 }
@@ -423,7 +414,7 @@ nav#nav1 ul{
 	padding: 0 .5em 0 0;
 	height: 100%;
 	max-width: 898px;
-	display: flex;
+	display: flex !important;
 	justify-content: space-between;
 	align-items: center;
 }
@@ -472,11 +463,6 @@ nav#nav1 a:focus-within h1{
 @media only screen and (min-width: 480px){
 	nav#nav1 h1{
 		font-size: 1.6em;
-		/* white-space: nowrap;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%); */
 	}
 }
 @media only screen and (min-width: 768px){
@@ -650,22 +636,17 @@ nav#nav2 #overlay-menu li button.close{
 	position: absolute;
 	top: 7px;
 	right: 9px;
-	/* top: .5em;
-  right: .7em; */
 }
 @media only screen and (min-width: 480px){
 	nav#nav2 #overlay-menu li button.close{
 		padding: 6px 8px;
 		top: 11px;
 		right: 17px;
-		/* top: .7em;
-		right: 1.35em; */
 	}
 }
 @media only screen and (min-width: 768px){
 	nav#nav2 #overlay-menu li button.close{
 		top: 12px;
-		/* top: .8em; */
 	}
 }
 nav#nav2 #overlay-menu li button.close:hover,
