--- a/css/style.css
+++ b/css/style.css
@@ -96,33 +96,23 @@ header{
 	}
 }
 main{
-	font-size: 100%;
+	font-size: 1.1em;
 	text-align: center;
 	line-height: 1.6em;
 	margin: 0 auto;
-	padding: 0 1em;
+	padding: 0 1em 1em;
 	max-width: 575px;
-}
-@media only screen and (min-width: 480px){
-	main{
-		font-size: .95em;
-	}
 }
 @media only screen and (min-width: 768px){
 	main{
-		font-size: 1em;
 		padding: 1.5em 1em 1em;
-	}
-}
-@media only screen and (min-width: 992px){
-	main{
-		font-size: 1.05em;
 	}
 }
 .cluster main{
 	position: relative;
 	margin: 47px auto 0;
 	padding: 0 .5em 0;
+	max-width: 100%;
 }
 @media only screen and (min-width: 480px){
 	.cluster main{
@@ -133,6 +123,7 @@ main{
 @media only screen and (min-width: 768px){
 	.cluster main{
 		margin-top: 51px;
+		max-width: 700px;
 	}
 }
 @media only screen and (min-width: 992px){
@@ -189,7 +180,7 @@ main section ul{
 	}
 }
 footer{
-	font-size: .9em;
+	font-size: 1em;
 	text-align: center;
 	line-height: 1.6em;
 	color: #fff;
@@ -199,7 +190,6 @@ footer{
 }
 @media only screen and (min-width: 768px){
 	footer{
-		font-size: 1em;
 		margin: 1em auto 0;
 		padding: .5em 1em 1em 1em;
 	}
@@ -294,6 +284,7 @@ h2{
 	font-size: 1.2em;
 }
 .cluster h2{
+	font-size: 1.25em;
 	font-weight: 700;
 	font-variant: small-caps;
 	color: #fff;
@@ -307,7 +298,7 @@ h3{
 	font-size: 1.1em;
 }
 h4{
-	font-size: 1.0em;
+	font-size: 1em;
 	font-weight: 600;
 }
 .details h4{
@@ -341,7 +332,7 @@ img{
 
 /* "Skip to main content" coding adapted from https://webaim.org/techniques/skipnav/ */
 #nav0 a{
-	font-size: .9em;
+	font-size: 1em;
 	color: #fff;
 	background-color: #1157AC;
 	border-right: 2px solid #fff;
@@ -416,9 +407,9 @@ nav#nav1.borderBottom{
 nav#nav1 ul{
 	list-style: none;
 	margin: 0 auto;
-	padding: 0 .5em 0 0;
+	padding: 0 .5em;
 	height: 100%;
-	max-width: 898px;
+	max-width: 700px;
 	display: flex !important;
 	justify-content: space-between;
 	align-items: center;
@@ -426,11 +417,13 @@ nav#nav1 ul{
 @media only screen and (min-width: 480px){
 	nav#nav1 ul{
 		padding: 0 1em 0 .5em;
+		justify-content: flex-end;
 	}
 }
 @media only screen and (min-width: 768px){
 	nav#nav1 ul{
 		padding: 0 1em 0 .5em;
+		justify-content: space-between;
 	}
 }
 @media only screen and (min-width: 992px){
@@ -442,6 +435,20 @@ nav#nav1 ul{
 }
 nav#nav1 li{
 	display: inline-block;
+}
+@media only screen and (min-width: 480px){
+	nav#nav1 li:nth-child(1){
+		position: absolute;
+		left: 50%;
+		transform: translate(-50%, 0);
+	}
+}
+@media only screen and (min-width: 768px){
+	nav#nav1 li:nth-child(1){
+		position: unset;
+		left: unset;
+		transform: translate(0, 0);
+	}
 }
 nav#nav1 li:nth-child(8){
 	position: relative;
@@ -629,7 +636,7 @@ nav#nav2 #overlay-menu ul li{
 	border-bottom: 1px solid #fff;
 }
 nav#nav2 #overlay-menu ul li span{
-	font-size: .85em;
+	font-size: .95em;
 	font-family: 'Noto Serif', serif;
 }
 nav#nav2 #overlay-menu li button.close{
@@ -691,12 +698,13 @@ nav#nav2 #overlay-menu li button.close:focus i{
 /* 	Carousel adapted from https://www.w3.org/TR/wai-aria-practices-1.1/examples/carousel/carousel-1.html */
 .carousel .carousel-inner{
 	margin: 0 auto;
-	max-width: 900px;
+	max-width: 700px;
 	position: relative;
 	}
 @media only screen and (min-width: 992px){
 	.carousel .carousel-inner{
 		width: 75% !important;
+		max-width: 900px;
 	}
 }
 /* Carousel items */
@@ -806,13 +814,7 @@ nav#nav2 #overlay-menu li button.close:focus i{
 }
 .carousel .carousel-item .carousel-caption h3 a,
 .image-caption h3 a{
-	font-size: .75em;
-}
-@media only screen and (min-width: 768px){ 
-	.carousel .carousel-item .carousel-caption h3 a,
-	.image-caption h3 a{
-		font-size: .9em;
-	}
+	font-size: .9em;
 }
 .carousel .carousel-item .carousel-caption a,
 .image-caption a{
@@ -933,7 +935,7 @@ nav#nav2 #overlay-menu li button.close:focus i{
 /* Adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
 #topButton{
 	cursor: pointer;
-	font-size: .75em;
+	font-size: .9em;
 	color: #fff;
 	background-color: #1C4C87;
 	border: 2px solid #fff;
@@ -954,7 +956,6 @@ nav#nav2 #overlay-menu li button.close:focus i{
 }
 @media only screen and (min-width: 768px){
 	#topButton{
-		font-size: .95em;
 		bottom: 101px;
 	}
 }
@@ -993,21 +994,13 @@ nav#nav2 #overlay-menu li button.close:focus i{
 	font-style: italic;
 }
 .small{
-	font-size: .9em;
+	font-size: .95em;
 }
 .smaller{
 	font-size: .9em;
 }
 .smallest{
-	font-size: .9em;
-}
-@media only screen and (min-width: 768px){
-	.smaller{
-		font-size: .8em;
-	}
-	.smallest{
-		font-size: .7em;
-	}
+	font-size: .85em;
 }
 .smallcaps{
 	font-variant: small-caps;
