--- a/css/style.css
+++ b/css/style.css
@@ -75,9 +75,9 @@ body{
 	width: 100%;
 }
 header{
-	position: relative;
 	margin: 41px auto 0;
 	padding: 0 .5em;
+	position: relative;
 }
 @media only screen and (min-width: 480px){
 	header{
@@ -109,10 +109,10 @@ main{
 	}
 }
 .cluster main{
-	position: relative;
 	margin: 47px auto 0;
 	padding: 0 .5em 0;
 	max-width: 100%;
+	position: relative;
 }
 @media only screen and (min-width: 480px){
 	.cluster main{
@@ -140,6 +140,8 @@ main{
 .cluster main section{
 	border: 1px solid #322d29;
 	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 	margin: 1em 0 2em;
 }
 @media only screen and (min-width: 480px){
@@ -291,6 +293,8 @@ h2{
 	background: #5c7d62;
 	border-bottom: 1px solid #322d29;
 	border-radius: 4px 4px 0 0;
+	-webkit-border-radius: 4px 4px 0 0;
+	-moz-border-radius: 4px 4px 0 0;
 	margin-top: 0;
 	padding: .5em 0;
 }
@@ -338,6 +342,8 @@ img{
 	border-right: 2px solid #fff;
 	border-bottom: 2px solid #fff;
 	border-bottom-right-radius: 8px;
+	-webkit-border-right-radius: 8px;
+	-moz-border-right-radius: 8px;
 	padding: 8px 6px;
 	position: absolute;
 	top: -40px;
@@ -823,6 +829,8 @@ nav#nav2 #overlay-menu li button.close:focus i{
 	background-color: rgba(0, 0, 0, 0.65);
 	border: 2px solid transparent;
 	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 	margin: 0;
 	padding: 1px 6px;
 	display: inline-block;
@@ -940,6 +948,8 @@ nav#nav2 #overlay-menu li button.close:focus i{
 	background-color: #1C4C87;
 	border: 2px solid #fff;
 	border-radius: 4px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
 	outline: none;
 	padding: 5px;
 	position: fixed;
