--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,14 @@ Table of Contents
 
 ** 1.0. Main CSS **
 1.1. Main Components
-1.2. Anchors, Headings, Images
-1.3.1. Navigation: Main
-1.3.2. Overlay
-1.4. Carousel 
-1.5. Scroll to Top Button
-1.6. Formatting
-1.7. Lines and Lists
+1.2. Cluster Pages
+1.3. Anchors, Headings, Images
+1.4.1. Navigation: Main
+1.4.2. Overlay
+1.5. Carousel 
+1.6. Scroll to Top Button
+1.7. Formatting
+1.8. Lines and Lists
 */
 
 /*--------------------------------------*/
@@ -113,65 +114,19 @@ main{
 		padding: 1.5em 1em 1em;
 	}
 }
-.cluster main{
-	margin: 47px auto 0;
-	padding: 0 .5em 0;
-	max-width: 100%;
-	position: relative;
-}
-@media only screen and (min-width: 480px){
-	.cluster main{
-		margin-top: 47px;
-		padding: .5em 1em 0;
-	}
-}
-@media only screen and (min-width: 768px){
-	.cluster main{
-		margin-top: 51px;
-		max-width: 700px;
-	}
-}
-@media only screen and (min-width: 992px){
-	.cluster main{
-		margin-top: 63px;
-		padding: 0 1em;
-		max-width: 1366px;
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-		align-items: stretch;
-	}
-}
-.cluster main section{
-	border: 1px solid #322d29;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	margin: 1em auto 2em;
-}
-@media only screen and (min-width: 480px){
-	.cluster main section{
-		margin: .5em 0 2em;
-	}
-}
-@media only screen and (min-width: 992px){
-	.cluster main section{
-		margin: 1em;
-		width: calc(50% - 2em - 2px);
-		max-width: 500px;
-	}
-}
-.cluster main section div{
-	text-align: center;
-	display: inline-block;
-}
-.cluster main section p{
-	padding: 0 1em;
-}
 main section p,
 main section ol,
 main section ul{
 	text-align: left;
+}
+ol.mission{
+	margin: 0 1em;
+	padding: 0;
+}
+@media (min-width: 768px){
+	ol.mission{
+		margin: 0 2em;
+	}
 }
 .organizers{
 	margin-bottom: 1em;
@@ -226,6 +181,18 @@ footer p .site-detail:last-child::after{
 		white-space: nowrap;
 	}
 }
+hr{
+	font-size: .9em;
+	background: #8c8c8c;
+	border: 0;
+	margin: 1.2em 0;
+	height: 1px;
+}
+@media only screen and (min-width: 768px){
+	hr{
+		margin: 2em 0;
+	}
+}
 /* Makes overlay disappear above 992 */
 @media only screen and (min-width: 992px){
 	html{
@@ -243,7 +210,95 @@ footer p .site-detail:last-child::after{
 }
 
 
-/* 1.2. Anchors, Headings, Images */
+/* 1.2. Cluster Pages */
+
+.cluster main{
+	margin: 47px auto 0;
+	padding: 0 .5em 0;
+	max-width: 100%;
+	position: relative;
+}
+@media only screen and (min-width: 480px){
+	.cluster main{
+		margin-top: 47px;
+		padding: .5em 1em 0;
+	}
+}
+@media only screen and (min-width: 768px){
+	.cluster main{
+		margin-top: 51px;
+		max-width: 700px;
+	}
+}
+@media only screen and (min-width: 992px){
+	.cluster main{
+		margin-top: 63px;
+		padding: 0 1em;
+		max-width: 1366px;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: stretch;
+	}
+}
+.cluster main section{
+	border: 1px solid #322d29;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	margin: 1em auto 2em;
+}
+@media only screen and (min-width: 480px){
+	.cluster main section{
+		margin: .5em 0 2em;
+	}
+}
+@media only screen and (min-width: 992px){
+	.cluster main section{
+		margin: 1em;
+		/* width: calc(50% - 2em - 2px); */
+		max-width: 500px;
+		flex: 1 0 50%;
+	}
+	.cluster main section:first-child{
+		max-width: 700px;
+		flex: 0 1 100%;
+	}
+}
+.cluster main section h2{
+	font-size: 1.25em;
+	font-weight: 700;
+	font-variant: small-caps;
+	color: #fff;
+	background: #1C4C87;
+	border-bottom: 1px solid #322d29;
+	border-radius: 4px 4px 0 0;
+	-webkit-border-radius: 4px 4px 0 0;
+	-moz-border-radius: 4px 4px 0 0;
+	margin-top: 0;
+	padding: .5em 0;
+}
+.cluster main section:first-child h2{
+	background: #5c7d62;
+	font-variant: normal;
+}
+.cluster main section p{
+	padding: 0 1em;
+}
+.cluster main section div p{
+	padding: 0;
+}
+.cluster main section div{
+	text-align: center;
+	display: inline-block;
+}
+.cluster main section div ol{
+	line-height: 1.875em;
+	padding: 0 0 1em 1em;
+}
+
+
+/* 1.3. Anchors, Headings, Images */
 *:focus{
 	outline: 0 none;
 }
@@ -312,19 +367,6 @@ h2, h3, h4{
 h2{
 	font-size: 1.2em;
 }
-.cluster h2{
-	font-size: 1.25em;
-	font-weight: 700;
-	font-variant: small-caps;
-	color: #fff;
-	background: #5c7d62;
-	border-bottom: 1px solid #322d29;
-	border-radius: 4px 4px 0 0;
-	-webkit-border-radius: 4px 4px 0 0;
-	-moz-border-radius: 4px 4px 0 0;
-	margin-top: 0;
-	padding: .5em 0;
-}
 h3{
 	font-size: 1.1em;
 }
@@ -366,7 +408,7 @@ a:focus img{
 }
 
 
-/* 1.3.1. Navigation: Main */
+/* 1.4.1. Navigation: Main */
 
 /* "Skip to main content" coding adapted from https://webaim.org/techniques/skipnav/ */
 #nav0 a{
@@ -590,7 +632,7 @@ nav#nav1 li button:focus i{
 }
 
 
-/* 1.3.2. Overlay */
+/* 1.4.2. Overlay */
 
 nav#nav2{
   transition: margin-right 0.7s;
@@ -713,7 +755,7 @@ nav#nav2 #overlay-menu li button.close:focus i{
 }
 
 
-/* 1.4. Carousel */
+/* 1.5. Carousel */
 
 /* 	Carousel adapted from https://www.w3.org/TR/wai-aria-practices-1.1/examples/carousel/carousel-1.html */
 .carousel .carousel-inner{
@@ -951,7 +993,7 @@ nav#nav2 #overlay-menu li button.close:focus i{
 }
 
 
-/* 1.5. Scroll to Top Button */
+/* 1.6. Scroll to Top Button */
 
 /* Scroll to top button */
 /* Adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
@@ -1003,7 +1045,7 @@ nav#nav2 #overlay-menu li button.close:focus i{
 }
 
 
-/* 1.6. Formatting */
+/* 1.7. Formatting */
 
 .bold{
 	font-weight: bold;
@@ -1031,39 +1073,4 @@ nav#nav2 #overlay-menu li button.close:focus i{
 }
 .underline{
 	text-decoration: underline;
-}
-
-
-/* 1.7. Lines and Lists */
-
-hr{
-	font-size: .9em;
-	background: #8c8c8c;
-	border: 0;
-	margin: 1.2em 0;
-	height: 1px;
-}
-@media only screen and (min-width: 768px){
-	hr{
-		margin: 2em 0;
-	}
-}
-ol.mission{
-	margin: 0 1em;
-	padding: 0;
-}
-@media (min-width: 768px){
-	ol.mission{
-		margin: 0 2em;
-	}
-}
-.cluster main section div ol{
-	line-height: 1.875em;
-	padding: 0 0 1em 0;
-}
-/* .cluster main section div ol li{
-	margin-bottom: .5em;
-} */
-.cluster main section div ol li ol{
-	padding-left: 1em;
 }
