--- a/css/style.css
+++ b/css/style.css
@@ -246,27 +246,30 @@ hr{
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
-	margin: 1em auto 2em;
+	margin: 1em auto;
+}
+.cluster main section:first-child{
+	min-height: 150px;
+	position: relative;
 }
 @media only screen and (min-width: 480px){
 	.cluster main section{
-		margin: .5em 0 2em;
+		margin: .5em 0 1.5em;
 	}
 }
 @media only screen and (min-width: 992px){
 	.cluster main section{
 		margin: 1em;
 		max-width: 500px;
-		flex: 1 0 50%;
+		flex: 1 0 calc(50% - 2em - 2px);
 	}
 		.cluster main section:first-child{
 			max-width: 300px;
-			flex: 1 0 20%;
-			position: relative;
+			flex: 1 0 calc(27.5% - 2em - 2px);
 	}
 		.cluster main section:nth-child(2){
-		flex: 1 0 80%;
-		max-width: 700px;
+			max-width: 700px;
+			flex: 1 0 calc(72.5% - 2em - 2px);
 	}
 }
 .cluster main section h2{
@@ -282,11 +285,10 @@ hr{
 	padding: .5em 0;
 }
 .cluster main section h2#level-2-title{
-	font-size: 1.8em;
+	font-size: 1.6em;
 	white-space: nowrap;
 	border: 3px solid #fff;
 	border-radius: 5px;
-	/* background: #737373; */
 	margin: 0;
 	padding: 10px;
 	position: absolute;
