--- a/css/style.css
+++ b/css/style.css
@@ -268,14 +268,14 @@ hr{
 			flex: 1 0 calc(27.5% - 2em - 2px);
 	}
 		.cluster main section:nth-child(2){
-			max-width: 700px;
+			max-width: 600px;
 			flex: 1 0 calc(72.5% - 2em - 2px);
 	}
 }
 .cluster main section h2{
-	font-size: 1.2em;
+	font-size: 1.1em;
 	font-weight: 700;
-	font-variant: small-caps;
+	font-variant: normal;
 	color: #fff;
 	border-bottom: 1px solid #322d29;
 	border-radius: 4px 4px 0 0;
@@ -285,7 +285,7 @@ hr{
 	padding: .5em 0;
 }
 .cluster main section h2#level-2-title{
-	font-size: 1.6em;
+	font-size: 1.5em;
 	white-space: nowrap;
 	border: 3px solid #fff;
 	border-radius: 5px;
