--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,14 @@ Table of Contents
 
 ** 1.0. Main CSS **
 1.1. Main Components
-1.2. Cluster Pages
+1.2. Cluster & Content Pages
 1.3. Anchors, Headings, Images
 1.4.1. Navigation: Main
 1.4.2. Overlay
 1.5. Carousel 
-1.6. Scroll to Top Button
-1.7. Formatting
-1.8. Lines and Lists
+1.6. Youtube Player
+1.7. Scroll to Top Button
+1.8. Formatting
 */
 
 /*--------------------------------------*/
@@ -210,18 +210,25 @@ hr{
 }
 
 
-/* 1.2. Cluster and Content Pages */
+/* 1.2. Cluster & Content Pages */
 
 /* Section-specific colors */
+/* 
+Zoomcasts (red): #94433f;
+Green: #5c7d62;
+Yellow: #f2da87;
+Blue: #1457af;
+Light Blue: #b9d6fa;
+Gray: #595959;
+*/
+/* ----------------------- */
 .zoomcasts.cluster main section:first-child{
-	background: linear-gradient(to left top, #fff 50%, #5c7d62 50%);
+	background: linear-gradient(to left top, #fff 50%, #94433f 50%);
 }
+.zoomcasts.content header,
 .zoomcasts.cluster main section h2{
 	color: white;
-	background: #5c7d62;
-}
-.zoomcasts.content header{
-	background: #5c7d62;
+	background: #94433f;
 }
 /* ----------------------- */
 .cluster main{
@@ -344,13 +351,18 @@ hr{
 	}
 }
 .content main{
+	text-align: left;
 	padding: .5em 1em 1em;
 }
 @media only screen and (min-width: 768px){
 	.content main{
 		padding: 1em 1em 1em;
 	}
-}	
+}
+.content h2{
+	font-size: 1.9em;
+	color: #191716;
+}
 
 
 /* 1.3. Anchors, Headings, Images */
@@ -1048,7 +1060,126 @@ nav#nav2 #overlay-menu li button.close:focus i{
 }
 
 
-/* 1.6. Scroll to Top Button */
+/* 1.6. YouTube Player */
+
+/* YouTube player taken from https://webdesign.tutsplus.com/tutorials/how-to-lazy-load-embedded-youtube-videos--cms-26743 */
+/* Review https://codepen.io/beardofprey/pen/MXmxXR */
+.wrapper{
+	margin: 2em auto;
+	padding: 0;
+	border: 1px solid #595959;
+}
+.youtube{
+	cursor: pointer;
+	outline: 3px transparent solid;
+	padding-top: 56.25%;
+	overflow: hidden;
+	position: relative;
+}
+.youtube:hover,
+.youtube:focus{
+	outline: 3px #595959 solid;
+}
+.youtube img{
+	width: 100%;
+	top: -16.82%;
+	left: 0;
+}
+.youtube:hover img,
+.youtube:focus img{
+	opacity: 0.7;
+}
+.youtube .play-button{
+	background-color: #94433f;
+	border-radius: 6px;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
+	-webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
+	-moz-box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
+	width: 60px;
+	height: 40px;
+	z-index: 3;
+}
+@media only screen and (min-width: 480px){
+	.youtube .play-button{
+		width: 90px;
+		height: 60px;
+	}
+}
+.youtube .play-button:before{
+	content: "";
+	border-style: solid;
+	border-width: 10px 0 10px 18px;
+	border-color: transparent transparent transparent #fff;
+}
+@media only screen and (min-width: 480px){
+	.youtube .play-button:before{
+		border-width: 15px 0 15px 26px;
+	}
+}
+.youtube:hover .play-button,
+.youtube:focus .play-button{
+	background-color: #595959;
+}
+.youtube img,
+.youtube .play-button{
+	cursor: pointer;
+}
+.youtube img,
+.youtube iframe,
+.youtube .play-button,
+.youtube .play-button:before{
+	position: absolute;
+}
+.youtube .play-button,
+.youtube .play-button:before{
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+.youtube iframe{
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: 3; /* Hides play button when iframe loads */
+}
+.skipcontrols a{
+	font-size: .8em;
+	font-family: Arial, Geneva, Tahoma, sans-serif;
+	color: #1C4C87;
+	background: #E3E3E3;
+	border-bottom-right-radius: 8px;
+	-webkit-border-bottom-right-radius: 8px;
+	-moz-border-bottom-right-radius: 8px;
+	padding: 4px 6px;
+	position: absolute;
+	left: 0px;
+	z-index: 10;
+	transition: top 1s ease-out;
+	-webkit-transition: top 1s ease-out;
+}
+@media only screen and (min-width: 768px){
+	.skipcontrols a{
+		font-size: .9em;
+	}
+}
+.skipcontrols a{
+	border: 2px solid #595959;
+	top: -44px;
+}
+.skipcontrols a:focus{
+	outline-color: transparent;
+	top: 0px;
+	left: 0px;
+	position: absolute;
+	transition: top .4s ease-in;
+	-webkit-transition: top .4s ease-in;
+}
+
+
+/* 1.7. Scroll to Top Button */
 
 /* Scroll to top button */
 /* Adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
@@ -1100,7 +1231,7 @@ nav#nav2 #overlay-menu li button.close:focus i{
 }
 
 
-/* 1.7. Formatting */
+/* 1.8. Formatting */
 
 .bold{
 	font-weight: bold;
