--- a/css/style.css
+++ b/css/style.css
@@ -362,47 +362,44 @@ Gray: #595959;
 /*****/
 .content header{
 	font-size: 1.1em;
-	margin: calc(41px + .5em) 1em 0;
+	margin: calc(41px + .4em) auto 0;
+	padding: 0;
 	height: 20px;
+	max-width: calc(100% - 26px);
 }
 @media only screen and (min-width: 480px){
 	.content header{
-		margin: calc(47px + .5em) 1em 0;
+		margin: calc(47px + .5em) auto 0;
+		width: calc(100% - 30px);
+		max-width: 700px;
 	}
 }
 @media only screen and (min-width: 768px){
 	.content header{
 		margin: calc(51px + .5em) auto 0;
-		width: 87%;
 	}
 }
 @media only screen and (min-width: 992px){
 	.content header{
 		margin: calc(63px + .5em) auto 0;
-	}
-}
-@media only screen and (min-width: 1200px){
-	.content header{
-		max-width: 1100px;
-	}
-}
-@media only screen and (min-width: 1366px){
-	.content header{
-		max-width: 1200px;
+		width: calc(100% - 46px);
+		max-width: 1366px;
 	}
 }
 .content main{
 	text-align: left;
 	padding: .5em 1em 1em;
 }
-/* @media only screen and (min-width: 768px){
-	.content main{
-		padding: 1em 1em 1em;
-	}
-} */
 .content h2{
 	font-size: 1.9em;
 	color: #191716;
+	line-height: 1.3em;
+	margin: 0;
+}
+@media only screen and (min-width: 992px){
+	.content h2{
+		margin: .5em 0 1em;
+	}
 }
 
 
@@ -597,7 +594,7 @@ nav#nav1.borderBottom{
 nav#nav1 ul{
 	list-style: none;
 	margin: 0 auto;
-	padding: 0 .5em;
+	padding: 0 8px;
 	height: 100%;
 	max-width: 700px;
 	display: flex !important;
@@ -609,16 +606,10 @@ nav#nav1 ul{
 		padding: 0 1em 0 .5em;
 	}
 }
-@media only screen and (min-width: 768px){
-	nav#nav1 ul{
-		padding: 0 1em 0 .5em;
-	}
-}
 @media only screen and (min-width: 992px){
 	nav#nav1 ul{
-		padding: 0 1em;
+		padding: 0 16px;
 		max-width: 1366px;
-		justify-content: space-evenly;
 	}
 }
 nav#nav1 li{
@@ -662,6 +653,11 @@ nav#nav1 ul li:not(:first-child):not(:last-child){
 	nav#nav1 ul li:not(:first-child):not(:last-child){
 		display: block;
 		visibility: visible;
+	}
+}
+@media only screen and (min-width: 1200px){
+	nav#nav1 ul li:not(:first-child):not(:last-child){
+		font-size: 1em;
 	}
 }
 nav#nav1 li a{
@@ -1117,9 +1113,19 @@ nav#nav2 #overlay-menu li button.close:focus i{
 /* YouTube player taken from https://webdesign.tutsplus.com/tutorials/how-to-lazy-load-embedded-youtube-videos--cms-26743 */
 /* Review https://codepen.io/beardofprey/pen/MXmxXR */
 .wrapper{
-	margin: 2em auto;
+	margin: 1.5em auto;
 	padding: 0;
 	border: 1px solid #595959;
+}
+@media only screen and (min-width: 480px){
+	.wrapper{
+		margin: 1.25em auto 1.5em;
+	}
+}
+@media only screen and (min-width: 768px){
+	.wrapper{
+		margin: 1em auto 1.5em;
+	}
 }
 .youtube{
 	cursor: pointer;
