--- a/css/style.css
+++ b/css/style.css
@@ -916,35 +916,9 @@ nav#nav2 #overlay-menu li button.close:focus i{
 .carousel .carousel-item .carousel-image{
 	background: #E3E3E3;
 }
-@media screen and (min-width:320px){
-	.carousel .carousel-item .carousel-image{
-		min-height: 170px;
-	}
-}
-@media screen and (min-width:480px){
-	.carousel .carousel-item .carousel-image{
-		min-height: 250px;
-	}
-}
-@media screen and (min-width:768px){
-	.carousel .carousel-item .carousel-image{
-		min-height: 392px;
-	}
-}
-@media screen and (min-width:992px){
-	.carousel .carousel-item .carousel-image{
-		min-height: 404px;
-	}
-}
-@media screen and (min-width:1200px){
-	.carousel .carousel-item .carousel-image{
-		min-height: 495px;
-	}
-}
 .carousel .carousel-item .carousel-image img{
 	width: 100% !important;
-	height: 100%;
-	max-height: 170px;
+	max-height: calc(178px * .95);
 	object-fit:cover;
 	-o-object-fit: cover;
 	overflow: hidden;
@@ -952,22 +926,32 @@ nav#nav2 #overlay-menu li button.close:focus i{
 }
 @media screen and (min-width:480px){
 	.carousel .carousel-item .carousel-image img{
-		max-height: 250px;
+		max-height: calc(263px * .95);
+	}
+}
+@media screen and (min-width:624px){
+	.carousel .carousel-item .carousel-image img{
+		max-height: calc(348px * .95);
 	}
 }
 @media screen and (min-width:768px){
 	.carousel .carousel-item .carousel-image img{
-		max-height: 392px;
+		max-height: calc(411px * .95);
 	}
 }
 @media screen and (min-width:992px){
 	.carousel .carousel-item .carousel-image img{
-		max-height: 404px;
+		max-height: calc(423px * .95);
 	}
 }
 @media screen and (min-width:1200px){
 	.carousel .carousel-item .carousel-image img{
-		max-height: 495px;
+		max-height: calc(515px * .95);
+	}
+}
+@media screen and (min-width:1366px){
+	.carousel .carousel-item .carousel-image img{
+		max-height: calc(529px * .95);
 	}
 }
 /* Carousel caption (also regular images) */
