--- a/css/style.css
+++ b/css/style.css
@@ -1151,7 +1151,8 @@ nav#nav2 #overlay-menu li button.close:focus i{
 }
 .youtube img{
 	width: 100%;
-	top: -16.82%;
+	top: 0%;
+	/* top: -16.82%; */
 	left: 0;
 }
 .youtube:hover img,
