--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@ Table of Contents
 1.3. Anchors, Headings, Images
 1.4.1. Navigation: Main
 1.4.2. Overlay
-1.5. Carousel 
-1.6. Youtube Player
+1.5. Carousel [moved to separate file]
+1.6. YouTube Player [most css moved to separate file]
 1.7. Scroll to Top Button
 1.8. Formatting
 */
@@ -414,9 +414,10 @@ Gray: #595959;
 	font-size: 1.9em;
 	color: #191716;
 	line-height: 1.3em;
-	margin: 0;
+	/* margin: 0; */
+	margin: .25em 0 .5em;
 }
-@media only screen and (min-width: 992px){
+@media only screen and (min-width: 768px){
 	.content h2{
 		margin: .5em 0 1em;
 	}
@@ -879,342 +880,15 @@ nav#nav2 #overlay-menu li button.close:focus i{
 	}
 }
 
-
 /* 1.5. Carousel */
 
-/* 	Carousel adapted from https://www.w3.org/TR/wai-aria-practices-1.1/examples/carousel/carousel-1.html */
-.carousel .carousel-inner{
-	margin: 0 auto;
-	max-width: 700px;
-	position: relative;
-	}
-@media only screen and (min-width: 992px){
-	.carousel .carousel-inner{
-		width: 75% !important;
-		max-width: 900px;
-	}
-}
-/* Carousel items */
-.carousel .carousel-item{
-	line-height: 0;
-	width: 100%;
-	overflow: hidden;
-	position: relative;
-	display: none;
-}
-.carousel .carousel-item.active{
-	display: block;
-}
-.carousel .carousel-items{
-	border: solid 1px gray;
-}
-.carousel .carousel-items.focus{
-	border-color: #fff;
-	outline: solid 3px #191716;;
-}
-/* Carousel images */
-.carousel .carousel-item .carousel-image{
-	background: #E3E3E3;
-}
-.carousel .carousel-item .carousel-image img{
-	width: 100% !important;
-	min-height: calc(178px * .95);
-	max-height: calc(178px * .95);
-	object-fit:cover;
-	-o-object-fit: cover;
-	overflow: hidden;
-	object-position: 50% 50%;
-}
-@media screen and (min-width:480px){
-	.carousel .carousel-item .carousel-image img{
-		min-height: calc(263px * .95);
-		max-height: calc(263px * .95);
-	}
-}
-@media screen and (min-width:624px){
-	.carousel .carousel-item .carousel-image img{
-		min-height: calc(348px * .95);
-		max-height: calc(348px * .95);
-	}
-}
-@media screen and (min-width:768px){
-	.carousel .carousel-item .carousel-image img{
-		min-height: calc(411px * .95);
-		max-height: calc(411px * .95);
-	}
-}
-@media screen and (min-width:992px){
-	.carousel .carousel-item .carousel-image img{
-		min-height: calc(423px * .95);
-		max-height: calc(423px * .95);
-	}
-}
-@media screen and (min-width:1200px){
-	.carousel .carousel-item .carousel-image img{
-		min-height: calc(515px * .95);
-		max-height: calc(515px * .95);
-	}
-}
-@media screen and (min-width:1366px){
-	.carousel .carousel-item .carousel-image img{
-		min-height: calc(529px * .95);
-		max-height: calc(529px * .95);
-	}
-}
-/* Carousel caption (also regular images) */
-.carousel .carousel-item .carousel-caption,
-.image-caption{
-	text-align: center;
-	line-height: 1.2em;
-	padding: 0;
-	position: absolute;
-	right: 0;
-	bottom: .4em;
-	left: 0;
-}
-@media only screen and (min-width: 480px){
-	.carousel .carousel-item .carousel-caption,
-	.image-caption{
-		line-height: 1.6em;
-		bottom: .5em;
-	}
-}
-@media only screen and (min-width: 768px){
-	.carousel .carousel-item .carousel-caption{
-		right: .5em;
-		bottom: .5em;
-		left: unset;
-	}
-}
-.carousel .carousel-item .carousel-caption p,
-.image-caption p{
-	font: 16px 'Noto Serif', serif;
-	font-weight: 400;
-	margin: 0;
-	padding: 0;
-	display: inline-block;
-}
-@media only screen and (min-width: 320px){
-	.carousel .carousel-item .carousel-caption p,
-	.image-caption p{
-		line-height: inherit;
-	}
-}
-.carousel .carousel-item .carousel-caption p a,
-.image-caption p a{
-	font-size: .9em;
-}
-.carousel .carousel-item .carousel-caption a,
-.image-caption a{
-	text-decoration: underline;
-	color: #fff;
-	background-color: rgba(0, 0, 0, 0.65);
-	border: 2px solid transparent;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	margin: 0;
-	padding: 1px 6px;
-	display: inline-block;
-}
-.carousel .carousel-item .carousel-caption a:hover,
-.carousel .carousel-item .carousel-caption a:focus,
-.image-caption a:hover,
-.image-caption a:focus{
-	background-color: #1157AC;
-	margin: 0;
-}
-.carousel .carousel-item .carousel-caption a:focus,
-.image-caption a:focus{
-	border-color: #1157AC;
-	box-shadow: inset 0px 0px 0px 2px #fff;
-	-webkit-box-shadow: inset 0px 0px 0px 2px #fff;
-    -moz-box-shadow: inset 0px 0px 0px 2px #fff;
-}
-/* Image caption */
-.image-wrapper{
-	margin: 0 auto;
-	position: relative;
-}
-@media only screen and (min-width: 768px){
-	.image-wrapper{
-		width: 90%;
-	}
-}
-/* Shared CSS for Pause, Next and Previous Slide Controls */
-.carousel .controls button{
-	background-color: transparent;
-	border: none;
-	outline: none;
-	padding: 0;
-	position: absolute;
-	top: 5px;
-	z-index: 10;
-}
-.carousel .controls button svg rect.background{
-	fill: black;
-	stroke: black;
-	stroke-width: 1px;
-	opacity: 0.6;
-}
-.carousel .controls button svg rect.border{
-	fill: transparent;
-	stroke: transparent;
-	stroke-width: 2px;
-}
-.carousel .controls button:focus rect.background,
-.carousel .controls button:hover rect.background,
-.carousel .controls button:focus rect.border,
-.carousel .controls button:hover rect.border{
-	fill: #1157AC; ;
-	stroke: #1157AC;
-	opacity: 1;
-}
-/* Next and Previous Slide Controls */
-.carousel .controls button svg polygon{
-	fill: #fff;
-	stroke: #fff;
-	stroke-width: 2;
-	opacity: 1;
-}
-.carousel .controls button.previous{
-	top: 10px;
-	right: 50px;
-}
-.carousel .controls button.next{
-	top: 10px;
-	right: 6px;
-}
-/* Pause Control */
-.carousel .controls button.rotation{
-	top: 10px;
-	left: 6px;
-}
-.carousel .controls button.rotation svg polygon.pause{
-	fill: transparent;
-	stroke-width: 4;
-	stroke: transparent;
-}
-.carousel .controls button.rotation svg polygon.play{
-	fill: transparent;
-	stroke-width: 1;
-	stroke: transparent;
-}
-.carousel .controls button.rotation.pause svg polygon.pause,
-.carousel .controls button.rotation.play svg polygon.play{
-	fill: #fff;
-	stroke: #fff;
-}
-/* Common focus styling for svg buttons */
-/* .carousel .controls button:focus rect.background,
-.carousel .controls button:hover rect.background,
-.carousel .controls button:focus rect.border,
-.carousel .controls button:hover rect.border{
-	fill: #1157AC; ;
-	stroke: #1157AC; 
-	opacity: 1;
-} */
-.carousel .controls button:focus rect.border{
-	stroke: #fff;
-}
+/* Moved to separate file */
 
 
 /* 1.6. YouTube Player */
 
-/* YouTube player taken from https://webdesign.tutsplus.com/tutorials/how-to-lazy-load-embedded-youtube-videos--cms-26743 */
-/* Review https://codepen.io/beardofprey/pen/MXmxXR */
-.wrapper{
-	margin: 1.5em auto;
-	padding: 0;
-	border: 1px solid #595959;
-}
-@media only screen and (min-width: 480px){
-	.wrapper{
-		margin: 1.25em auto 1.5em;
-	}
-}
-@media only screen and (min-width: 768px){
-	.wrapper{
-		margin: 1em auto 1.5em;
-	}
-}
-.youtube{
-	cursor: pointer;
-	outline: 3px transparent solid;
-	padding-top: 56.25%;
-	overflow: hidden;
-	position: relative;
-}
-.youtube:hover,
-.youtube:focus{
-	outline: 3px #595959 solid;
-}
-.youtube img{
-	width: 100%;
-	top: 0%;
-	/* top: -16.82%; */
-	left: 0;
-}
-.youtube:hover img,
-.youtube:focus img{
-	opacity: 0.7;
-}
-.youtube .play-button{
-	background-color: #c3503b;
-	border-radius: 6px;
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	/* box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
-	-webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
-	-moz-box-shadow: 0 0 30px rgba(0, 0, 0, 0.6); */
-	width: 60px;
-	height: 40px;
-	z-index: 3;
-}
-@media only screen and (min-width: 480px){
-	.youtube .play-button{
-		width: 90px;
-		height: 60px;
-	}
-}
-.youtube .play-button:before{
-	content: "";
-	border-style: solid;
-	border-width: 10px 0 10px 18px;
-	border-color: transparent transparent transparent #fff;
-}
-@media only screen and (min-width: 480px){
-	.youtube .play-button:before{
-		border-width: 15px 0 15px 26px;
-	}
-}
-.youtube:hover .play-button,
-.youtube:focus .play-button{
-	background-color: #595959;
-}
-.youtube img,
-.youtube .play-button{
-	cursor: pointer;
-}
-.youtube img,
-.youtube iframe,
-.youtube .play-button,
-.youtube .play-button:before{
-	position: absolute;
-}
-.youtube .play-button,
-.youtube .play-button:before{
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-.youtube iframe{
-	height: 100%;
-	width: 100%;
-	top: 0;
-	left: 0;
-	z-index: 3; /* Hides play button when iframe loads */
-}
+/* Most CSS moved to separate file */
+
 .skipcontrols a{
 	font-size: .8em;
 	font-family: Arial, Geneva, Tahoma, sans-serif;
